<?xml version="1.0"?>
<package format="3">
  <name>warehouse_manager</name>
  <version>0.0.1</version>
  <description>High-level phase manager for mapping→patrolling workflow (skeleton)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
